most recent build should be at the top of this file.

** Use the notes.html file instead of this file for change notes?

Thanks!

2.5.0.2500
----------
- Add support for plugins.
- Added Share With Facebook button.
- Added Share With Evernote button.
- Update to the current version of Sparkle, which prevents auto-updating to a version of Vienna which will not run on the user's system.

2.4.0.2401
----------
- Fix the filter field article selection problem reported at http://forums.cocoaforge.com/viewtopic.php?f=18&t=21665
- Enable navigating the built-in browser's back/forward-list via  left/right three-finger swipes.
- Enable navigating feeds via left/right three-finger swipes: Left for "Go Back" and right for "View Next Unread".
- Enable as scrolling to the top/bottom of web pages and the article list via upwards/downwards three-finger swipes.
- Change "currentSelection" to "currentTextSelection" in Viennas Applescript terminology.

2.4.0.2400
----------
- Remove command-shift-g as keyboard shortcut for creating group folder. This is now used for Find Previous.
- Show an alert when upgrading the database version, because it can take a while.
- Turn off animation of tab resizing. It was slow, superfluous and apparently sometimes caused drawing errors in the tab bar background.
- Fix crash when sorting articles by enclosure URL.
- Update SQLite to version 3.6.18.
- Add ability to "Show XML Source" for feeds, which is now cached locally.
- Add support for IDN (internationlized domain names) in the browser.
- Add new supported blog editor (Blogo).
- Increase the standard number of simultaneous refresh downloads to 20.
- Redo browser and filter bar UI. Slimmer look, new buttons.
- Vienna's UI now correctly dims when the application is the background.
- Enable printing of web-pages from the built-in browser.
- Vienna now shows an error page with useful information when the browser fails to load a resource.