@@ -8,6 +8,7 @@
 <li>Added Share With Facebook button.</li>
 <li>Added Share With Evernote button.</li>
 <li>Update to the current version of Sparkle, which prevents auto-updating to a version of Vienna which will not run on the user's system.</li>
+<li>Fix bug where deleting a feed in Unified view mode would cause Vienna to stop working correctly.</li>
 </ul>
 </body>
 </html>
